--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -1,26 +1,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/blue03">
 
     <EditText
         android:id="@+id/newTaskText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@null"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/white"
+        android:fontFamily="@font/sanspro"
+        android:hint="@string/new_task"
+        android:padding="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:hint="New Task"/>
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/newTaskButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/newTaskText"
         android:layout_alignParentEnd="true"
-        android:textSize="16dp"
-        android:text="Save"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="60dp"
+        android:backgroundTint="@color/blue04"
+        android:fontFamily="@font/sanspro"
+        android:padding="20dp"
+        android:text="@string/save"
         android:textAllCaps="false"
-        android:background="@android:color/transparent"
-        android:textColor="@android:color/darker_gray"/>
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
 
 
